--- a/css/jquery.materialripple.css
+++ b/css/jquery.materialripple.css
@@ -28,6 +28,7 @@
 		-ms-transform: scale(2.5);
 		-o-transform: scale(2.5);
 		transform: scale(2.5);
+		opacity: 0;
 	}
 }
 @-webkit-keyframes ripple {
